// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/mailchimp SendEmail sends email with attachements 1`] = `
Ok {
  "value": Object {
    "messageId": "64f8ae445d854861a2f5d565f4f0d530",
  },
}
`;

exports[`communication/send-email/mailchimp SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "7547fdd456284bddbdd40427ef1f6193",
  },
}
`;

exports[`communication/send-email/mailchimp SendEmail when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Validation error: {\\\\\\"message\\\\\\":{\\\\\\"from_email\\\\\\":\\\\\\"An email address must contain a single @\\\\\\"}}\\"
}
AST Path: definitions[0].statements[3].responseHandlers[1].statements[1]
Original Map Location: Line 52, column 7",
}
`;
